# yandex_music_cppapi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ymc_cmake.sh
docs/: request_info
examples/old_test/: main.cpp
src/: CMakeLists.txt  client.cpp  client.hpp  config.cpp  config.hpp  types.hpp  utils.cpp  utils.hpp  ymapi.cpp  ymapi.hpp
ymcppapi/: types.hpp  ymapi.cpp  ymapi.hpp  ymclient.cpp  ymclient.hpp
